--- a/demo_data/config_demo.yml
+++ b/demo_data/config_demo.yml
@@ -22,5 +22,5 @@ dir:
   regulondb: "RegulonDB"
 
 metadata:
-  configfile: ""                         
+  configfile: "rsat-snakemake/demo_data/config_demo.yml"                         
   TF: "NarL"
